# agent-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/load/: latest-report.json
docs/: api.md  architecture.md  balancing-report.md  deployment.md  testing-report.md
infra/prometheus/: prometheus.yml
scripts/: load_reporting.py  run_load_validation.py  smoke_agent_flow.py  smoke_airline_agent_flow.py  smoke_jwt_flow.py
services/gateway/: Dockerfile
services/registry/: Dockerfile
shared/: auth.py  config.py  contracts.py  errors.py  health.py  logging.py  telemetry.py
tests/integration/: test_airline_agent_domain.py  test_balancer_health_latency.py  test_gateway_api.py  test_gateway_auth.py  test_gateway_dynamic_registry.py  test_gateway_guardrails.py  test_gateway_jwt_auth.py  test_gateway_metrics.py  test_gateway_mlflow_tracing.py  test_gateway_routing.py  test_gateway_usage_estimation.py  test_infra_observability_assets.py  test_load_locust.py  test_load_mock_provider.py  test_load_reporting.py  test_registry_api.py  test_registry_auth.py  test_registry_jwt_auth.py  test_registry_store_threading.py  test_shared_contracts.py  test_shared_core.py  test_shared_observability.py  test_smoke_agent_flow_script.py  test_smoke_airline_agent_flow_script.py  test_smoke_jwt_flow_script.py
tests/load/: locustfile.py  mock_provider_app.py  scenarios.py
tests/smoke/: test_airline_agent_smoke.py  test_demo_agent_smoke.py  test_gateway_smoke.py  test_metrics_smoke.py  (+3 more)
(+48 files in other folders)
